--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,9 +1,5 @@
-
-tasks:
-  - init: |
-      sudo apt update && sudo apt install -y protobuf-compiler
-      go get github.com/golang/protobuf/protoc-gen-go
-      go get google.golang.org/grpc/cmd/protoc-gen-go-grpc
+image:
+  file: .gitpod.Dockerfile
 vscode:
   extensions:
     - zxh404.vscode-proto3
