--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,7 +1,10 @@
 image:
   file: .gitpod.Dockerfile
 tasks:
-  - init: go get ./...
+  - init: |
+      go install github.com/golang/protobuf/protoc-gen-go@latest
+      go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
+      go get ./...
 vscode:
   extensions:
     - zxh404.vscode-proto3
