--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,6 +5,11 @@ tasks:
       go install github.com/golang/protobuf/protoc-gen-go@latest
       go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
       go get ./...
+  - name: workspace
+    command: |
+      alias okteto="okteto --token $OKTETO_TOKEN" 
+      okteto context use https://cloud.okteto.com
+      okteto context update-kubeconfig
 vscode:
   extensions:
     - zxh404.vscode-proto3
