--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -7,9 +7,9 @@ tasks:
       go get ./...
   - name: workspace
     command: |
-      alias okteto="okteto --token $OKTETO_TOKEN" 
       okteto context use https://cloud.okteto.com
       okteto context update-kubeconfig
 vscode:
   extensions:
     - zxh404.vscode-proto3
+    - ms-kubernetes-tools.vscode-kubernetes-tools
