--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -7,6 +7,7 @@ tasks:
       go get ./...
   - name: workspace
     command: |
+      docker login -u thisisommore -p $DOCKER_TOKEN
       okteto context use https://cloud.okteto.com
       okteto context update-kubeconfig
   - name: envoy proxy
