--- a/k8s/app-service.yml
+++ b/k8s/app-service.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: dns-service
+  name: http1-grpc-service
 spec:
   type: NodePort
   selector:
@@ -9,3 +9,27 @@ spec:
   ports:
     - port: 8080
       targetPort: 8080
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: http2-grpc-service
+spec:
+  type: NodePort
+  selector:
+    app: dns-server
+  ports:
+    - port: 8000
+      targetPort: 8000
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: envoy-admin
+spec:
+  type: NodePort
+  selector:
+    app: dns-server
+  ports:
+    - port: 9901
+      targetPort: 9901
